fix ligature alignment

--- a/css/bamos.css
+++ b/css/bamos.css
@@ -9,14 +9,16 @@ body {
     /* background-color: #faf8f3; */
     background-color: #ffffff;
     font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    /* Fix Raleway number alignment */
+
+    /* Fix Raleway number/ligature alignment */
     font-variant-numeric: lining-nums;
-    -moz-font-feature-settings: "lnum" 1;
-    -moz-font-feature-settings: "lnum=1";
-    -ms-font-feature-settings: "lnum" 1;
-    -o-font-feature-settings: "lnum" 1;
-    -webkit-font-feature-settings: "lnum" 1;
-    font-feature-settings: "lnum" 1;
+    -moz-font-feature-settings: "lnum" 1, "liga" 0, "clig" 0;
+    -moz-font-feature-settings: "lnum=1", "liga=0", "clig=0";
+    -ms-font-feature-settings: "lnum" 1, "liga" 0, "clig" 0;
+    -o-font-feature-settings: "lnum" 1, "liga" 0, "clig" 0;
+    -webkit-font-feature-settings: "lnum" 1, "liga" 0, "clig" 0;
+    font-feature-settings: "lnum" 1, "liga" 0, "clig" 0;
+    font-variant-ligatures: none;
 }
 
 a {
